# pypdf2docx

./: README.md  pyproject.toml  requirements.txt  setup.py
pypdf2docx/: pypdf2docx.py
